--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
           <li class="nav-item">
             <a class="nav-link active" href="index.html">Image</a>
           </li>
-          <!-- <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" href="camera.html">Camera</a>
-          </li> -->
+          </li>
 
           <li class="nav-item">
             <a class="nav-link" href="testing.html">Test Model</a>
